# django_homework_28

./: manage.py  pyproject.toml
ads/: models.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py
ads/views/: ad.py
datasets/: converter_db.py
django_homework_28_1/: asgi.py  settings.py  urls.py  wsgi.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_id_user_location.py
